testsuite/tests/indexed-types/should_compile/Simple14.stderr

Simple14.hs:8:8: error:
    • Couldn't match type ‘z0’ with ‘z’
        ‘z0’ is untouchable
          inside the constraints: x ~ y
          bound by the type signature for:
                     eqE :: (x ~ y) => EQ_ z0 z0
          at Simple14.hs:8:8-39
      ‘z’ is a rigid type variable bound by
        the type signature for:
          eqE :: forall x y z p. EQ_ x y -> ((x ~ y) => EQ_ z z) -> p
        at Simple14.hs:8:8-39
      Expected type: EQ_ z0 z0
        Actual type: EQ_ z z
    • In the ambiguity check for ‘eqE’
      To defer the ambiguity check to use sites, enable AllowAmbiguousTypes
      In the type signature: eqE :: EQ_ x y -> (x ~ y => EQ_ z z) -> p
